Fix vertical align

--- a/frontend/src/styles/Sidebar.module.css
+++ b/frontend/src/styles/Sidebar.module.css
@@ -32,6 +32,7 @@
       overflow: hidden;
       color: black;
       transition: all 0.1s ease-out;
+      padding-block-end: 16px;
 
       & > .navTag {
         opacity: 0;
